KSENROLL-12687: Manage Course Offering Search button alignment issues fix.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69016 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2062,3 +2062,8 @@ table.dataTable tr.even td.sorting_1 {
 .off {
   display: none;
 }
+
+#courseOfferingManagementCriteriaSection .uif-boxLayoutHorizontalItem{
+     display: inline-flex;
+     margin-top: 10px;
+ }
