--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/ks-button.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/ks-button.less
@@ -4,3 +4,8 @@
     	-moz-box-shadow: none !important;
     	box-shadow: none !important;
 }
+
+#show_button{
+    margin-bottom: auto;
+    margin-top: 0;
+}
